feat: Added some features. Added Redis and hierarchy tree support, updated route for docs, and improved error handling. Added documents for some controllers. Solved some bugs.
